--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <header>
             <h2 class="h2 article-title">CareerFoundry - Advanced Python Bootcamp</h2>
           </header>
-          <a class="resume" href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download
+          <a class="resume" href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download target="_blank"
             style="text-align: center; align-items: center; justify-content: center;">Click for Certificate of Course
             Completion</a>
           <br>
@@ -419,34 +419,23 @@
               <div class="icon-box">
                 <ion-icon name="book-outline"></ion-icon>
               </div>
-
               <h3 class="h3">Course Applications</h3>
             </div>
-
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Recipe App Live</h4>
-
                 <span>7/2023</span>
-
-
-
                 <p class="timeline-text">
-                  - Live Django Application where you can create a user to build your own recipes and add ingredients.
-                  You can search for recipes by recipe name or ingredient. The your recipes tab on the left navigation
-                  will take you to all your recipes to change or delete. Recipe detail page will show data analytics of
-                  the recipes, as well as directions and other information.
+                  - A live Django application that enables users to create recipes and add ingredients. Search recipes
+                  by name or
+                  ingredient. Manage recipes and explore data analytics on the recipe detail page.
                 </p>
-
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite,
-                  Pandas, Matplotlib, dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
+                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
+                  dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
                 </p>
-
-
-                <img src="./assets/images/Recipe_Heroku_App.jpg" class="careerfoundry-image" walt="music"
+                <img src="./assets/images/Recipe_Heroku_App.jpg" class="careerfoundry-image" alt="Recipe App"
                   loading="lazy" />
-
                 <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
                   <p class="project-category">Recipe App Heroku Site - Click to visit</p>
@@ -455,28 +444,22 @@
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Github Repo - Click to visit</p>
                 </a>
-
                 <h4 class="h4 timeline-item-title" style="padding-top: 20px;">Recipe App Flow Charts/Model Schema</h4>
-
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - During the course we drew up flow charts and mapped out schemas to organize thoughts
-                  on the project progress. We used the admin to test out the implemented schemas that
-                  were planned. View flowcharts helped to test the user journey through the app, and
-                  map out expected behavior. Flowcharts were helpful with checking for unexpected behavior as well.
+                  - During the course, we designed flow charts and schemas to organize project progress. Flowcharts
+                  aided in
+                  testing user journey and expected behavior, helping identify unexpected behavior as well.
                 </p>
-
                 <div class="row" style="display: flex;">
-                  <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image" walt="music"
-                    loading="lazy" style="padding-top: 20px; width: 50%" />
-
-                  <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image" walt="music"
-                    loading="lazy" style="padding-top: 20px; width: 50%;" />
+                  <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
+                    alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%" />
+                  <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image"
+                    alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%;" />
                 </div>
-
-
                 <p style="padding-top: 20px;">Screenshots - Models/Flowcharts/Admin:</p>
                 <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
               </li>
+
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
@@ -487,9 +470,8 @@
 
 
                 <p class="timeline-text">
-                  - Recipe console app where you can add, remove, edit, and search for recipes. Navigation is controlled
-                  from a while loop until you type the command to exit. Navigation menus has all the commands listed for
-                  navigation.
+                  - Recipe console app where you can add, remove, edit, and search for recipes. It will loop back to the
+                  main menu until you type the command that is listed to exit the program.
                 </p>
 
                 <p class="timeline-text" style="padding-top: 20px;">
@@ -501,7 +483,8 @@
 
                 <p class="timeline-text" style="padding-top: 20px;">
                   You can download the screenshots below to walk through how the Recipe Console App is used. The
-                  ABOUTME.md page in the root directory of the github repo, will walk you through how to download run
+                  ABOUTME.md page in the root directory of the github repo, will walk you through how to download and
+                  run
                   the app.
                   </menu>
 
