--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">
-                Intern at Bleached Solutions && Contract Work
+                Freelance Work at bleached Solutions
               </h4>
 
               <span>current</span>
