--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <section class="about-text">
           <p>
-            I have 2.5 years of invaluable professional experience in the realm of full stack development. My ongoing
+              I have 3.5 years of invaluable professional experience in the realm of full stack development. My ongoing
             engagement involves contracting with Bleached Solutions, where I've been actively immersed in projects that
             encompass a rich array of technologies such as Angular, Vue.js, Javascript, Chrome Extension, C#, and
             Golang. Prior to this, I had the privilege of interning at Revenue IQ, a role in which I undertook pivotal
@@ -141,14 +141,14 @@
             technological landscape at Revenue IQ revolved predominantly around C# and Angular.
           </p>
           <p>
-            My unyielding aspiration is to continually expand my horizons within the realm of software and amplify my
+              My unyielding aspiration is to continually expand my horizons within the realm of software and amplify my
             grasp of full-stack engineering. This fervor for growth has fueled my dedication over the past 3 years as
             I've delved deeper into the realm of software development. In addition to my professional pursuits, I
             channel my creative energy into crafting 2D games utilizing Unity during my leisure time.
           </p>
           <p>
-            It's also worth highlighting that I've recently completed the Python for Web Developers course at
-            CareerFoundry, a testament to my commitment to staying abreast of the latest industry trends and refining my
+              It's also worth highlighting that I've recently completed the Python for Web Developers course at
+            CareerFoundry, a testament to my commitment to staying aware of the latest industry trends and refining my
             skill set.
           </p>
         </section>
@@ -386,7 +386,7 @@
                 to the browser.
               </p>
             </li>
-            
+
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Intern at Revenue IQ</h4>
 
