change to recipe app look

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                   - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
                   dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
                 </p>
-                <img src="./assets/images/Recipe_Heroku_App.jpg" class="careerfoundry-image" alt="Recipe App"
+                <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
                   loading="lazy" />
                 <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
