--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <section class="about-text">
           <p>
-            I have 3.5 years of invaluable professional experience in the realm of full stack development. My ongoing
+            I have 4 years of professional experience in the realm of full stack development. My ongoing
             engagement involves contracting with Bleached Solutions, where I've been actively immersed in projects that
             encompass a rich array of technologies such as Angular, Vue.js, Javascript, Chrome Extension, C#, and
             Golang. Prior to this, I had the privilege of interning at Revenue IQ, a role in which I undertook pivotal
