--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
 
         <section class="about-text">
           <p>
-            I have 4 years of professional experience in the realm of full stack development. My ongoing
-            engagement involves contracting with Bleached Solutions, where I've been actively immersed in projects that
-            encompass a rich array of technologies such as Angular, Vue.js, Javascript, Chrome Extension, C#, and
+            Having over 4 years of professional experience in the realm of full stack development, I am ready to make
+            great contributions to your software company/team. My ongoing
+            engagement involves freelance projects with Bleached Solutions, where I've been actively immersed in
+            projects that encompass a rich array of technologies such as Angular, Vue.js, Javascript, Chrome Extension,
+            C#, and
             Golang. Prior to this, I had the privilege of interning at Revenue IQ, a role in which I undertook pivotal
             tasks such as microservice refactoring and the composition of meticulous unit tests. Notably, the
             technological landscape at Revenue IQ revolved predominantly around C# and Angular.
@@ -406,7 +408,7 @@
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Full Resume Link</h4>
 
-              <a class="resume" href="assets/images/David Resume2_10.pdf">Click Here To See Full Resume</a>
+              <a class="resume" href="assets/images/David Resume4_29.pdf">Click Here To See Full Resume</a>
             </li>
           </ol>
         </section>
@@ -480,7 +482,7 @@
                 </p>
 
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, SQLAlchemy, Mysqlclient, Ipython, SQLite
+                  - Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite
                 </p>
 
                 <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
