--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <section class="about-text">
           <p>
-            Having over 4 years of professional experience in the realm of full stack development, I am ready to make
+            Having over 4 years of professional experience in the realm of full-stack development, I am ready to make
             great contributions to your software company/team. My ongoing
             engagement involves freelance projects with Bleached Solutions, where I've been actively immersed in
             projects that encompass a rich array of technologies such as Angular, Vue.js, Javascript, Chrome Extension,
