--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:dlm1337.dm@gmail.com" class="contact-link">dlm1337.dm@gmail.com</a>
+              <a href="mailto:dev.dmcneill@gmail.com" class="contact-link">dev.dmcneill@gmail.com</a>
             </div>
           </li>
 
