Revert "Update index.html"
This reverts commit dead424f5ae233e99466da75d5230375484f3956.

--- a/index.html
+++ b/index.html
@@ -414,7 +414,15 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Recipe App Live</h4>
                 <span>7/2023</span>
-
+                <p class="timeline-text">
+                  - Developed a dynamic Django application allowing users to create recipes and seamlessly add
+                  ingredients. Users can conveniently search for recipes by name or ingredient, manage their recipes,
+                  and explore comprehensive data analytics on the recipe detail page.
+                </p>
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
+                  dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
+                </p>
                 <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
                   loading="lazy" />
                 <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
@@ -425,30 +433,19 @@
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Github Repo - Click to visit</p>
                 </a>
-                <p class="timeline-text">
-                  - Developed a dynamic Django application allowing users to create recipes and seamlessly add
-                  ingredients. Users can conveniently search for recipes by name or ingredient, manage their recipes,
-                  and explore comprehensive data analytics on the recipe detail page.
-                </p>
-                <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
-                  dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
-                </p>
                 <div class="row" style="display: flex;">
                   <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
                     alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%" />
                   <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image"
                     alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%;" />
                 </div>
-
-                <p style="padding-top: 20px;">Screenshots - Models/Flowcharts/Admin:</p>
-                <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Throughout the course, we utilized flowcharts and schemas to structure project development.
-                  Flowcharts
+                  Throughout the course, we utilized flowcharts and schemas to structure project development. Flowcharts
                   were instrumental in validating user journeys and anticipated behaviors, facilitating the
                   identification of any unexpected outcomes.
                 </p>
+                <p style="padding-top: 20px;">Screenshots - Models/Flowcharts/Admin:</p>
+                <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
               </li>
 
 
@@ -459,6 +456,16 @@
 
                 <span>6/2023</span>
 
+
+                <p class="timeline-text">
+                  - Developed a recipe console application enabling users to add, remove, edit, and search
+                  for recipes. Implemented a user-friendly interface that loops back to the main menu until the
+                  designated exit command is entered.
+                </p>
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite
+                </p>
 
                 <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
                   class="careerfoundry-image" />
@@ -471,29 +478,10 @@
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Github Repo - Click to visit</p>
                 </a>
-
-                <p class="timeline-text">
-                  - Developed a recipe console application enabling users to add, remove, edit, and search
-                  for recipes. Implemented a user-friendly interface that loops back to the main menu until the
-                  designated exit command is entered.
-                </p>
-
-                <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite
-                </p>
-
               </li>
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Practice Bookstore Live</h4>
                 <span>7/2023</span>
-
-                <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
-                  class="careerfoundry-image" />
-
-                <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
-                  <p class="project-category">Githup Repo - Click to visit</p>
-                </a>
 
 
                 <p class="timeline-text">
@@ -508,6 +496,13 @@
                   pillow
                 </p>
 
+                <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
+                  class="careerfoundry-image" />
+
+                <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
+                  <p class="project-category">Githup Repo - Click to visit</p>
+                </a>
               </li>
             </ol>
           </section>
