--- a/index.html
+++ b/index.html
@@ -378,9 +378,10 @@
               <span>Current</span>
               <p class="timeline-text">
                 - Contributed to diverse projects involving ASP.Net Core, Chrome Extension, Vue.js, Golang, and Angular.
-                - Led the development of robust V3 Chrome Extensions, featuring seamless script injections and enhanced
-                browser accessibility.
-                - Helped with various projects including the main website for Bleached-Solutions.
+                Also, led the development of robust V3 Chrome Extensions, featuring seamless script injections and
+                enhanced
+                browser accessibility. Was able to Help with various projects including the main website for
+                Bleached-Solutions.
               </p>
             </li>
 
@@ -440,7 +441,8 @@
                     alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%;" />
                 </div>
                 <p class="timeline-text" style="padding-top: 20px;">
-                  Throughout the course, we utilized flowcharts and schemas to structure project development. Flowcharts
+                  - Throughout the course, we utilized flowcharts and schemas to structure project development.
+                  Flowcharts
                   were instrumental in validating user journeys and anticipated behaviors, facilitating the
                   identification of any unexpected outcomes.
                 </p>
