--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Full Resume Link</h4>
+              <h2 class="h4 timeline-item-title">Full Resume Link</h2>
               <a class="resume" href="assets/images/David_Resume5_10.pdf">View Full Resume</a>
             </li>
 
@@ -377,7 +377,7 @@
               </h4>
               <span>Current</span>
               <p class="timeline-text">
-                - Contributed to diverse projects involving ASP.Net Core, Chrome Extension, Vue.js, Golang, and Angular.
+                - Contributed to diverse projects involving ASP.Net Core, Vue.js, Golang, and Angular.
                 Also, led the development of robust V3 Chrome Extensions, featuring seamless script injections and
                 enhanced
                 browser accessibility. Was able to Help with various projects including the main website for
