--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@
                 </p>
                 <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
                   loading="lazy" />
+
+                <h4 class="h4 timeline-item-title">Recipe App Links</h4>
                 <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
                   <p class="project-category">Recipe App Heroku Site - Click to visit</p>
@@ -434,11 +436,12 @@
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Github Repo - Click to visit</p>
                 </a>
+                <h4 class="h4 timeline-item-title">Recipe App Schema/Flowchart(User Journey)</h4>
                 <div class="row" style="display: flex;">
                   <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
-                    alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%" />
+                    alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%" />
                   <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image"
-                    alt="Flow Chart" loading="lazy" style="padding-top: 20px; width: 50%;" />
+                    alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%;" />
                 </div>
                 <p class="timeline-text" style="padding-top: 20px;">
                   - Throughout the course, we utilized flowcharts and schemas to structure project development.
@@ -446,7 +449,10 @@
                   were instrumental in validating user journeys and anticipated behaviors, facilitating the
                   identification of any unexpected outcomes.
                 </p>
-                <p style="padding-top: 20px;">Screenshots - Models/Flowcharts/Admin:</p>
+                <h4 class="h4 timeline-item-title">Admin Use Screenshots/Models/Flowcharts:</h4>
+                <p class="timeline-text" style="padding-top: 20px;">- Click link below to see some of the planning and
+                  work flow for the recipe app.</p>
+                <p style="padding-top: 20px;"></p>
                 <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
               </li>
 
