more formatting-loookin good!

--- a/index.html
+++ b/index.html
@@ -426,8 +426,14 @@
                 </p>
                 <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
                   loading="lazy" />
+              </li>
 
+              <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Recipe App Links</h4>
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Visit the recipe app website/check out the github to follow README.md for instructions on using the
+                  website.
+                </p>
                 <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
                   <p class="project-category">Recipe App Heroku Site - Click to visit</p>
@@ -436,56 +442,29 @@
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Github Repo - Click to visit</p>
                 </a>
-                <h4 class="h4 timeline-item-title">Recipe App Schema/Flowchart(User Journey)</h4>
-                <div class="row" style="display: flex;">
-                  <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
-                    alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%" />
-                  <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image"
-                    alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%;" />
-                </div>
+
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Recipe App Planning</h4>
+
                 <p class="timeline-text" style="padding-top: 20px;">
                   - Throughout the course, we utilized flowcharts and schemas to structure project development.
                   Flowcharts
                   were instrumental in validating user journeys and anticipated behaviors, facilitating the
                   identification of any unexpected outcomes.
                 </p>
-                <h4 class="h4 timeline-item-title">Admin Use Screenshots/Models/Flowcharts:</h4>
-                <p class="timeline-text" style="padding-top: 20px;">- Click link below to see some of the planning and
-                  work flow for the recipe app.</p>
+                <div class="row" style="display: flex;">
+                  <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
+                    alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%" />
+                  <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image"
+                    alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%;" />
+                </div>
+
+                <p class="timeline-text" style="padding-top: 20px;">- Click the link below to see some of the planning
+                  and
+                  work flow for the recipe app, including admin recipe creation.</p>
                 <p style="padding-top: 20px;"></p>
                 <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
-              </li>
-
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  Recipe Console App
-                </h4>
-
-                <span>6/2023</span>
-
-
-                <p class="timeline-text">
-                  - Developed a recipe console application enabling users to add, remove, edit, and search
-                  for recipes. Implemented a user-friendly interface that loops back to the main menu until the
-                  designated exit command is entered.
-                </p>
-
-                <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite
-                </p>
-
-                <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
-                  class="careerfoundry-image" />
-
-                <p style="padding-top: 20px;">Screenshots - Showing Recipe Console App Flow:</p>
-                <a href="./assets/images/Recipe-Console-App.zip" download>Download Assets</a>
-
-                <a href="https://github.com/dlm1337/careerfoundry-python-course/tree/main/Achievement%201/exercise1.7/Exercise%201.7-Task"
-                  style="padding-top: 20px;" target="_blank">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
-                  <p class="project-category">Github Repo - Click to visit</p>
-                </a>
               </li>
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Practice Bookstore Live</h4>
@@ -506,12 +485,52 @@
 
                 <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
                   class="careerfoundry-image" />
-
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Practice Bookstore Github</h4>
                 <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Githup Repo - Click to visit</p>
                 </a>
               </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Recipe Console App
+                </h4>
+
+                <span>6/2023</span>
+
+
+                <p class="timeline-text">
+                  - Developed a recipe console application enabling users to add, remove, edit, and search
+                  for recipes. Implemented a user-friendly interface that loops back to the main menu until the
+                  designated exit command is entered.
+                </p>
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite
+                </p>
+
+                <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
+                  class="careerfoundry-image" />
+              </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Recipe Console App Flow/Github
+                </h4>
+                <a href="./assets/images/Recipe-Console-App.zip" download>Download Assets</a>
+
+                <a href="https://github.com/dlm1337/careerfoundry-python-course/tree/main/Achievement%201/exercise1.7/Exercise%201.7-Task"
+                  style="padding-top: 20px;" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
+                  <p class="project-category">Github Repo - Click to visit</p>
+                </a>
+              </li>
+
+
+
+
             </ol>
           </section>
       </article>
