saving progress on formatting changes

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Work Experience</h3>
           </div>
 
           <ol class="timeline-list">
@@ -377,7 +377,7 @@
               </h4>
               <span>Current</span>
               <p class="timeline-text">
-                - Contributed to diverse projects involving ASP.Net Core, Vue.js, Golang, and Angular.
+                Contributed to diverse projects involving ASP.Net Core, Vue.js, Golang, and Angular.
                 Also, led the development of robust V3 Chrome Extensions, featuring seamless script injections and
                 enhanced
                 browser accessibility. Was able to Help with various projects including the main website for
@@ -389,7 +389,7 @@
               <h4 class="h4 timeline-item-title">Intern at Revenue IQ</h4>
               <span>9/2020 - 1/2021</span>
               <p class="timeline-text">
-                - Conducted unit testing with Moq library on API controllers. Implemented a repository pattern to
+                Conducted unit testing with Moq library on API controllers. Implemented a repository pattern to
                 facilitate comprehensive testing of the controllers.
               </p>
             </li>
@@ -416,12 +416,12 @@
                 <h4 class="h4 timeline-item-title">Recipe App Live</h4>
                 <span>7/2023</span>
                 <p class="timeline-text">
-                  - Developed a dynamic Django application allowing users to create recipes and seamlessly add
+                  Developed a dynamic Django application allowing users to create recipes and seamlessly add
                   ingredients. Users can conveniently search for recipes by name or ingredient, manage their recipes,
                   and explore comprehensive data analytics on the recipe detail page.
                 </p>
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
+                  Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
                   dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
                 </p>
                 <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
@@ -431,10 +431,11 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Recipe App Links</h4>
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Visit the recipe app website/check out the github to follow README.md for instructions on using the
+                  Visit the recipe app website/check out the github to follow README.md for instructions on using the
                   website.
                 </p>
-                <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
+                <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank"
+                  style="padding-top: 20px;">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
                   <p class="project-category">Recipe App Heroku Site - Click to visit</p>
                 </a>
@@ -448,11 +449,13 @@
                 <h4 class="h4 timeline-item-title">Recipe App Planning</h4>
 
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Throughout the course, we utilized flowcharts and schemas to structure project development.
+                  Throughout the course, we utilized flowcharts and schemas to structure project development.
                   Flowcharts
                   were instrumental in validating user journeys and anticipated behaviors, facilitating the
-                  identification of any unexpected outcomes.
+                  identification of any unexpected outcomes. Click the link below to see some of the planning
+                  and work flow for the recipe app, including admin recipe creation.
                 </p>
+                <a href="./assets/images/Charts-Flows.zip" download style="padding-top: 20px;">Download Assets</a>
                 <div class="row" style="display: flex;">
                   <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
                     alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%" />
@@ -460,11 +463,6 @@
                     alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%;" />
                 </div>
 
-                <p class="timeline-text" style="padding-top: 20px;">- Click the link below to see some of the planning
-                  and
-                  work flow for the recipe app, including admin recipe creation.</p>
-                <p style="padding-top: 20px;"></p>
-                <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
               </li>
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Practice Bookstore Live</h4>
@@ -472,27 +470,24 @@
 
 
                 <p class="timeline-text">
-                  - Developed a practice project to explore Django's Model-View-Template (MVT) architecture, user
+                  Developed a practice project to explore Django's Model-View-Template (MVT) architecture, user
                   authentication, and data analytics. Acquired proficiency in Django admin, migrations, and implementing
                   authorization for views and templates.
                 </p>
 
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
+                  Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
                   dj-database-url, psycopg2-binary, gunicorn, whitenoise,
-                  pillow
+                  pillow. The Bookstore Github repo is below.
                 </p>
-
-                <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
-                  class="careerfoundry-image" />
-              </li>
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Practice Bookstore Github</h4>
                 <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Githup Repo - Click to visit</p>
                 </a>
+                <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
+                  class="careerfoundry-image" />
               </li>
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
                   Recipe Console App
@@ -502,30 +497,25 @@
 
 
                 <p class="timeline-text">
-                  - Developed a recipe console application enabling users to add, remove, edit, and search
+                  Developed a recipe console application enabling users to add, remove, edit, and search
                   for recipes. Implemented a user-friendly interface that loops back to the main menu until the
                   designated exit command is entered.
                 </p>
 
                 <p class="timeline-text" style="padding-top: 20px;">
-                  - Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite
+                  Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite. Screenshots of app
+                  use/Github below.
                 </p>
-
-                <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
-                  class="careerfoundry-image" />
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  Recipe Console App Flow/Github
-                </h4>
-                <a href="./assets/images/Recipe-Console-App.zip" download>Download Assets</a>
+                <a href="./assets/images/Recipe-Console-App.zip" download style="padding-top: 20px;">Download Assets</a>
 
                 <a href="https://github.com/dlm1337/careerfoundry-python-course/tree/main/Achievement%201/exercise1.7/Exercise%201.7-Task"
                   style="padding-top: 20px;" target="_blank">
                   <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
                   <p class="project-category">Github Repo - Click to visit</p>
                 </a>
+
+                <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
+                  class="careerfoundry-image" />
               </li>
 
 
